# irys-ion

./: .gitignore  CMakeLists.txt  README.md
assets/foundation/: industrial_tiles.json  irys_standard.json
assets/foundation/irys_rig/: animations.json  rig.json
config/: player_foundation.json  tuning.json
docs/: 000 Project Hydration.md  999 Sol Implementation Specification.md
docs/art/: 011 Art Direction.md
docs/audio/: 012 Audio Direction.md
docs/design/: 000 Design Philosophy.md  001 Vision.md  002 Combat Model.md  003 Combat Language Specification.md  004 Player Feel Specification.md  005 Enemy Bible.md  006 Boss Bible.md  007 Progression Specification.md  008 World Bible.md
docs/narrative/: 009 Narrative Specification.md
docs/notebooks/: Design Notebook.md
docs/technical/: 010 Technical Specification.md
include/irys_ion/: core.hpp  game.hpp  player_foundation.hpp  rig.hpp
src/: core.cpp  game.cpp  main.cpp  player_foundation.cpp  rig.cpp
tests/: core_tests.cpp  player_foundation_tests.cpp
tools/: generate_foundation_assets.py
